--- a/package.json
+++ b/package.json
@@ -5,19 +5,33 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "auth": "tsx server/auth-cli.ts",
+    "nlp-test": "tsx server/nlp-test.ts",
+    "mcp-test": "tsx server/test-mcp-tools.ts",
+    "mcp-server": "tsx server/mcp-server.ts",
+    "server:dev": "tsx server/index.ts",
+    "server:build": "tsc server/*.ts --outDir dist/server",
+    "server:start": "node dist/server/index.js"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.20.1",
+    "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "googleapis": "^164.1.0",
+    "next": "15.5.6",
+    "openai": "^6.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "tsx": "^4.20.6",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20.19.23",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
