--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "auth": "tsx server/auth-cli.ts",
     "nlp-test": "tsx server/nlp-test.ts",
+    "slack-bot": "tsx server/slack-bot.ts",
+    "slack-test": "tsx server/slack-test.ts",
     "mcp-test": "tsx server/test-mcp-tools.ts",
     "mcp-server": "tsx server/mcp-server.ts",
     "server:dev": "tsx server/index.ts",
@@ -16,6 +18,8 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.1",
+    "@slack/bolt": "^4.5.0",
+    "@slack/web-api": "^7.11.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "googleapis": "^164.1.0",
