feat: Add Slack integration with calendar sync and comprehensive testing
- Implement Slack service with status updates, DND, and messaging
- Add calendar-to-Slack notification system
- Create comprehensive test suites for all services
- Update documentation with setup guides and token explanations
- Add environment status tracking
- Configure Slack tools for MCP integration

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "slack-test": "tsx server/slack-test.ts",
     "mcp-test": "tsx server/test-mcp-tools.ts",
     "mcp-server": "tsx server/mcp-server.ts",
+    "test": "tsx server/test-services.ts",
+    "test:unit": "tsx server/test-unit.ts",
+    "test:watch": "tsx watch server/test-services.ts",
     "server:dev": "tsx server/index.ts",
     "server:build": "tsc server/*.ts --outDir dist/server",
     "server:start": "node dist/server/index.js"
